--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b master",
-    "build": "gatsby build",
+    "deploy": "gatsby clean && gatsby build --prefix-paths && gh-pages -d public -b master",
+    "build": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
