--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react-pdf": "^4.1.0"
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
+    "gh-pages": "^3.1.0"
   },
   "repository": {
     "type": "git",
