--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -92,16 +92,19 @@ jobs:
     needs: build
     
     # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
-    permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
+    # permissions:
+    #  pages: write      # to deploy to Pages
+    #  id-token: write   # to verify the deployment originates from an appropriate source
 
     # Deploy to the github-pages environment
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+    #environment:
+    #  name: github-pages
+    #  url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+    #  - name: Deploy to GitHub Pages
+    #    id: deployment
+    #    uses: actions/deploy-pages@v1
+      - name: run npm install and build # run npm install to create files.
+        run: |
+          npm run deploy
