--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -33,13 +33,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: GitHub Config
-        run: |
-          git config user.email $user_email
-          git config user.name $user_name
-        env:
-          user_name: ${{ secrets.USER_NAME }}
-          user_email: ${{ secrets.USER_EMAIL }}
       - name: Checkout
         uses: actions/checkout@v3
       - name: run npm install and build # run npm install to create files.
@@ -91,6 +84,11 @@ jobs:
       - name: run npm install and build # run npm install to create files.
         env:
           PREFIX_PATHS: 'true'
-        run: ${{ steps.detect-package-manager.outputs.manager }} run deploy
+          user_name: ${{ secrets.USER_NAME }}
+          user_email: ${{ secrets.USER_EMAIL }}
+        run: |
+          git config user.email $user_email
+          git config user.name $user_name
+          ${{ steps.detect-package-manager.outputs.manager }} run deploy
         
 
